# youtube_data_api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: issue-template.md
.github/actions/: authenticate.yaml
.github/actions/authenticate/: action.yaml
.github/actions/build-image/: action.yaml
.github/actions/set-plan-comment/: action.yaml
.github/actions/set_plan_comment/: action.yaml
.github/actions/terraform-setup/: action.yaml
.github/scripts/: get-latest-tag.sh  get_latest_tag.sh  set-env.sh  set_env.sh  terraform-plan-comment.sh  terraform_plan_comment.sh
.github/workflows/: authenticate.yaml  cicd.yaml  deploy.yaml  prd-deploy.yaml  restrict-prs-to-main.yaml  stg-deploy.yaml  terraform.yaml
opt/airflow/: airflow.cfg  airflow.db  unittests.cfg
src/: .dockerignore  Dockerfile.dev  Dockerfile.prd  env.py  main.py  pyproject.toml
src/api/: youtube_api.py  youtube_api_config.py
src/api/jobs/: __init__.py  load.py  store.py  transfer.py
src/api/routers/: __init__.py  invoke.py
src/api/schemas/: __init__.py  job_request.py  youtube_response.py
src/gcp/: __init__.py  bq.py  firestore.py  gcs.py  pubsub.py  secretmanager.py
src/gcp/config/: bq_config.py  bq_schema.py  gcp_config.py
src/utils/: __init__.py  date_trunc_from_minutes.py  decode_pubsub_message.py  extract_datetime_from_file_path.py  extract_most_popular.py  gcp_error_handler.py
src/youtube/: __init__.py  youtube_api.py
terraform/: artifact_registry.tf  iam.tf  main.tf  provider.tf  pubsub.tf  run.tf  scheduler.tf  storage.tf  terraform.tfvars  variable.tf  variables.tf
terraform/common_stack/: iam.tf  identity_pool_configuration.tf  main.tf  output.tf  provider.tf  terraform.tfvars  variables.tf
terraform/module/artifact_registory/: main.tf  outputs.tf  variables.tf
terraform/module/bq/: main.tf  variables.tf
terraform/module/bq/bq_datasets/: main.tf
terraform/module/bq/bq_tables/: main.tf
terraform/module/bq/static_tables/videos/: most_popular.yaml
terraform/module/pubsub_subscription/: main.tf  outputs.tf  variables.tf
terraform/module/pubsub_topic/: main.tf  outputs.tf  variables.tf
terraform/module/run/: main.tf  outputs.tf  variables.tf
terraform/module/scheduler/: main.tf  variables.tf
terraform/module/storage/: main.tf  outputs.tf  variables.tf
terraform/resource_stack/: .terraform.lock.hcl  main.tf  provider.tf  terraform.tfvars  variables.tf
