[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["AnagumaReonKK <niwaniwaniwaniwatori.gairuze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.86.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pylint = "^2.17.3"
mypy = "^1.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
