[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kamegrueon <niwaniwaniwaniwatori.gairuze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.86.0"
pytz = "^2023.3"
google-cloud-storage = "^2.8.0"
google-cloud-bigquery = "^3.10.0"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
gunicorn = "^21.2.0"
google-cloud-secret-manager = "^2.18.2"
google-cloud-pubsub = "^2.19.7"
pydantic = "^2.6.3"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
flake8 = "^6.0.0"
pyproject-flake8 = "^6.0.0.post1"
isort = "^5.13.2"
flake8-isort = "^6.0.0"
flake8-bugbear = "^23.3.23"
flake8-builtins = "^2.1.0"
flake8-unused-arguments = "^0.0.13"
flake8-pytest-style = "^1.7.2"
pep8-naming = "^0.13.3"
mypy = "^1.2.0"
black = "^23.3.0"


[tool.poetry.group.types.dependencies]
types-pytz = "^2023.3.0.0"

# [tool.mypy]
# # エラー時のメッセージを詳細表示
# show_error_context = true
# # エラー発生箇所の行数/列数を表示
# show_column_numbers = true
# # import 先のチェックを行わない (デフォルトだとサードパーティーライブラリまでチェックする)
# ignore_missing_imports = true
# # 関数定義の引数/戻り値に型アノテーション必須
# disallow_untyped_defs = true
# # デフォルト引数に None を取る場合型アノテーションに Optional 必須
# no_implicit_optional = true
# # 戻り値が Any 型ではない関数の戻り値の型アノテーションが Any のとき警告
# warn_return_any = true
# # mypy エラーに該当しない箇所に `# type: ignore` コメントが付与されていたら警告
# # ※ `# type: ignore` が付与されている箇所は mypy のエラーを無視出来る
# warn_unused_ignores = true
# # 冗長なキャストに警告
# warn_redundant_casts = true
# # 注釈なしがある関数の定義を禁止
# check_untyped_defs = true

# [tool.black]
# line-length = 119

# [tool.isort]
# profile = "black"
# line_length = 119
# # 各ライブラリ群の説明を追記する
# import_heading_stdlib = "Standard Library"
# import_heading_thirdparty = "Third Party Library"
# import_heading_firstparty = "First Party Library"
# import_heading_localfolder = "Local Library"
# # from third_party import lib1, lib2...のような記述時の改行方法の設定(https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html)
# multi_line_output = 3
# # 最後の要素の末尾に","を付けるようにする設定
# include_trailing_comma = true

# [tool.flake8]
# max-line-length = 119
# # E203: ":"の前の空白を入れないルール
# # W503: 演算子の前に改行しないようにするルール
# extend-ignore = ["E203", "W503", "I005"]
# exclude = [".venv", ".git", "__pycache__"]
# max-complexity = 10

[tool.ruff]
# 1行の最大文字数
line-length = 88

[tool.ruff.lint]
# チェックするエラーの種類
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
# 除外するエラーの種類
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "B904", # raise ... from ... になっていない場合のエラーを無視
]

# ファイルごとのエラー除外
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# isort の設定
[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.pyupgrade]
# Python3.8互換のための設定
keep-runtime-typing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
